<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/footer_bg"
    android:gravity="center"
    android:padding="10dp"
    android:elevation="3dp"
    >

    <ImageButton
        android:id="@+id/map_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/map"
        android:backgroundTint="@color/primary_100"
        android:contentDescription="@string/map_page_name"
    />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/home"
        android:backgroundTint="@color/primary_100"
        android:contentDescription="@string/home_page_name"
    />

    <ImageButton
        android:id="@+id/convert_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/converter"
        android:backgroundTint="@color/primary_100"
        android:contentDescription="@string/convert_page_name"
    />

</LinearLayout>
